[package]
edition = "2021"
name = "throughput-test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"]}
tokio-uring = "0.4"
monoio = {version = "0.1", features = ["zero-copy"]}
core_affinity = "0.8"